[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "torchverif"
version = "0.0.2"
authors = [
  { name="Federico Rossi", email="federico.rossi95@outlook.it" },
]
description = "Torch-based SMC/PVS prover for neural network verification"
readme = "README.md"
requires-python = ">=3.8"

dependencies = [
  "torch~=2.2.0",
  "numpy~=1.26.4",
  "matplotlib~=3.8.3",
  "scipy~=1.12.0"
]

